tests/baselines/reference/superWithTypeArgument3.errors.txt
==== tests/cases/compiler/superWithTypeArgument3.ts (1 errors) ====
    class C<T> {
        foo: T;
        bar<U>(x: U) { }
    }
    
    class D<T> extends C<T> {
        constructor() {
            super<T>();
                 ~
!!! error TS1034: 'super' must be followed by an argument list or member access.
        }
        bar() {
            super.bar<T>(null);
        }
    }